--- a/src/app/landing-screen/landing-screen.component.scss
+++ b/src/app/landing-screen/landing-screen.component.scss
@@ -25,7 +25,7 @@ app-fragment-count {
     background-repeat: no-repeat;
     background-position: center center;
     width: 100vw;
-    height: 80vh;
+    height: 90vh;
     position: relative;
 }
 
@@ -43,7 +43,7 @@ app-fragment-count {
 .lower_wrapper {
     width: 100vw;
     position: absolute;
-    bottom: 80px
+    bottom: 80px;
 }
 
 .black_gradient_bar {
